# lvgl-opengl

./: .gitmodules  CMakeLists.txt  README.md  common.h  gl.c  gl.h  lv_conf.h  lv_drv_conf.h  main.c  sdl_gles.c  sdl_gles.h  tmp_driver.c
glad/: CMakeLists.txt
glad/include/glad/: glad.h
glad/src/: glad.c
